Fixed vertical alignment

--- a/themes/experience-engine/assets/styles/components/back-to-top.css
+++ b/themes/experience-engine/assets/styles/components/back-to-top.css
@@ -1,4 +1,5 @@
 .back-to-top {
+	align-items: center;
 	background-color: var(--brand-primary);
 	border: none;
 	border-radius: 50%;
